# promo-calculator

./: .gitignore  CMakeLists.txt  README.md  start_with_valgrind.sh
.github/workflows/: fortify.yml
data/: promo-calculator.ini
data/archives/001/12003/: DEPARTMENTS.CSV  PROMOTIONS.CSV  VAT.CSV  _PROMOLINK.CSV  _PROMOTIONS.CSV
data/archives/001/12003/VARS/: 20140301_001.VAR.OLD  20140307_001.VAR.OLD
data/archives/003/11055/: BARCODES.CSV  DEPARTMENTS.CSV  ITEMS.CSV  VAT.CSV
data/logs/: Promocalculator.log.prev
data/scanin/: POS001.IN  POS002.IN  POS003.IN  POS010.IN  POS015.IN  POS035.TMP  POS064.IN
include/: Item.h  barcodes.h  base_system.h  base_types.h  cart.h  connection.hpp  department.h  header.hpp  mime_types.hpp  promotion.h  reply.hpp  request.hpp  request_handler.hpp  request_parser.hpp  server.hpp  targetver.h
include/base/: archive.h  archive_map.h
src/: barcodes.cpp  base_system.cpp  base_types.cpp  cart.cpp  connection.cpp  department.cpp  item.cpp  main.cpp  mime_types.cpp  promotion.cpp  reply.cpp  request_handler.cpp  request_parser.cpp  server.cpp  stdafx.cpp
